update the logo (small image) update the FractionPlotL update info text update search layout ( “Validated Proteins Results Only” check box  to “Validated Proteins Only”) update export file names

--- a/CSF-PR-V2/src/main/webapp/VAADIN/themes/dario-theme/custom.css
+++ b/CSF-PR-V2/src/main/webapp/VAADIN/themes/dario-theme/custom.css
@@ -20,7 +20,10 @@
    -ms-filter: alpha(opacity=80);  
    filter: alpha(opacity=80);  
  }  
-
+ .spacer v-verticallayout v-layout v-vertical v-widget spacer v-verticallayout-spacer v-has-width v-has-height{
+     background: #4d749f;
+     
+ }
 
 .v-tabsheet-tabitem-selected {
 	border: none;
