--- a/trunk/PeptideShakerFileReader-v2/src/main/java/com/pepshack/GUI.form
+++ b/trunk/PeptideShakerFileReader-v2/src/main/java/com/pepshack/GUI.form
@@ -410,7 +410,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="12" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jButton4" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Component id="jButton5" min="-2" max="-2" attributes="0"/>
