--- a/trunk/CSF-PRUtility/src/main/java/com/view/GUI.form
+++ b/trunk/CSF-PRUtility/src/main/java/com/view/GUI.form
@@ -503,6 +503,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="jTextField13"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField13ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JSeparator" name="jSeparator2">
     </Component>
